# GameTimerModule

./: .gitignore  CMakeLists.txt  README.md
src/: GameTimer.cppm  GameTimer_impl.cpp  main.cpp
tests/: CMakeLists.txt  test_timer_basic.cpp
